# libam7xxx

./: .gitignore  CMakeLists.txt  ChangeLog  HACKING.asciidoc  NEWS  README.asciidoc  TODO  oldCMakeLists
cmake_modules/: mingw_cross_toolchain.cmake
contrib/: 50-am7xxx_mode_switch.rules  55-am7xxx.rules  am7xxx-autodisplay.sh  am7xxx-play-window.sh  howto-picopix.asciidoc  it.ao2.libam7xxx.metainfo.xml  libam7xxx-compile-on-Ubuntu-14.04-LTS.diff
contrib/performance/: 0001-Instrument-code-with-fps-meter.patch  README
doc/: CMakeLists.txt  Doxyfile.in  DoxygenMainpage.dox
doc/man/: CMakeLists.txt  am7xxx-modeswitch.1.txt  am7xxx-play.1.txt  picoproj.1.txt
examples/: CMakeLists.txt  am7xxx-modeswitch.c  am7xxx-play.c  picoproj.c
src/: CMakeLists.txt  am7xxx.c  am7xxx.h  libam7xxx.pc.in  portable_endian.h  serialize.c  serialize.h  tools.c  tools.h
